# spic

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COVERAGE.md  Makefile  README.md  SECURITY.md  book.toml  coverage.xml  pyproject.toml  test.py
.github/workflows/: coverage.yaml  dependabot.yaml  ruff.yaml  snyk.yaml
docs/: SUMMARY.md  USERGUIDE.md  installation.md  intro.md  tldr.md
performance/: go.mod  perf_test.go  results.md  run.sh
scripts/: cov.sh  test.sh
src/spic/: __about__.py  __init__.py  app.py  core_exceptions.py  defaults.py  emit.py  encoders.py  enums.py  exception_handlers.py  exceptions.py  func_handler.py  inspect.py  middleware.py  request.py  responses.py  routing.py  types.py  utils.py
src/spic/openapi/: __init__.py  models.py  utils.py
src/spic/params/: __init__.py  params.py
tests/: buf.gen.yaml  err.json  methods.py  test_call.py  test_dataclass_headers.py  test_dataclass_mixed.py  test_dataclass_query.py  test_encoders.py  test_grpc.py  test_hdr_args.py  test_openapi.py  test_param_wrapper.py  test_query_args.py  test_responses.py  test_router.py  test_schema.py  test_start.py
tests/protos/: hello.proto
